website/versioned_docs/version-0.2.x/api/classes/devtools.Composite.md
---
id: 'devtools.Composite'
title: 'Class: Composite'
custom_edit_url: null
---

<head>
  <meta name="robots" content="noindex" />
  <meta name="googlebot" content="noindex" />
</head>

[devtools](../modules/devtools.md).Composite

The Composite class provides APIs for managing composites (sets of Model streams) through their
development lifecycle, including the creation of new Models, import and export of existing
composites encoded as JSON, and compilation to the runtime format used by the
[`ComposeClient class`](client.ComposeClient.md).

Composite instances are **immutable**, so methods affecting the contents of the internal
composite definition will **return new instances** of the Composite class.

Composite class is exported by the [`devtools`](../modules/devtools.md) module.

```sh
import { Composite } from '@composedb/devtools'
```

## Constructors

### constructor

• **new Composite**(`params`)

#### Parameters

| Name     | Type                                                        |
| :------- | :---------------------------------------------------------- |
| `params` | [`CompositeParams`](../modules/devtools.md#compositeparams) |

## Properties

### VERSION

▪ `Static` **VERSION**: `string` = `'1.0'`

Current version of the composites format.

## Accessors

### hash

• `get` **hash**(): `string`

Stable hash of the internal definition, mostly used for comparisons.

#### Returns

`string`

---

### modelIDs

• `get` **modelIDs**(): `string`[]

StreamID of the Models used in the Composite.

#### Returns

`string`[]

## Methods

### copy

▸ **copy**(`models`): [`Composite`](devtools.Composite.md)

Copy a given set of Models identified by their stream ID, name or alias into a new Composite.

#### Parameters

| Name     | Type       |
| :------- | :--------- |
| `models` | `string`[] |

#### Returns

[`Composite`](devtools.Composite.md)

---

### equals

▸ **equals**(`other`): `boolean`

Check if the composite is equal to the other one provided as input.

#### Parameters

| Name    | Type                                                      |
| :------ | :-------------------------------------------------------- |
| `other` | [`CompositeInput`](../modules/devtools.md#compositeinput) |

#### Returns

`boolean`

---

### merge

▸ **merge**(`other`, `options?`): [`Composite`](devtools.Composite.md)

Merge the composite with the other one(s) into a new Composite.

#### Parameters

| Name      | Type                                                                                                                     |
| :-------- | :----------------------------------------------------------------------------------------------------------------------- |
| `other`   | [`CompositeInput`](../modules/devtools.md#compositeinput) \| [`CompositeInput`](../modules/devtools.md#compositeinput)[] |
| `options` | [`CompositeOptions`](../modules/devtools.md#compositeoptions)                                                            |

#### Returns

[`Composite`](devtools.Composite.md)

---

### setAliases

▸ **setAliases**(`aliases`, `replace?`): [`Composite`](devtools.Composite.md)

Set aliases for the Models in the composite, merging with existing ones unless `replace` is
`true`, and return a new Composite.

#### Parameters

| Name      | Type                           | Default value |
| :-------- | :----------------------------- | :------------ |
| `aliases` | `Record`\<`string`, `string`\> | `undefined`   |
| `replace` | `boolean`                      | `false`       |

#### Returns

[`Composite`](devtools.Composite.md)

---

### setCommonEmbeds

▸ **setCommonEmbeds**(`names`, `replace?`): [`Composite`](devtools.Composite.md)

Set common embeds for the Models in the composite, merging with existing ones unless `replace`
is `true`, and return a new Composite.

#### Parameters

| Name      | Type                   | Default value |
| :-------- | :--------------------- | :------------ |
| `names`   | `Iterable`\<`string`\> | `undefined`   |
| `replace` | `boolean`              | `false`       |

#### Returns

[`Composite`](devtools.Composite.md)

---

### setViews

▸ **setViews**(`views`, `replace?`): [`Composite`](devtools.Composite.md)

Set views for the Models in the composite, merging with existing ones unless `replace` is
`true`, and return a new Composite.

#### Parameters

| Name      | Type                       | Default value |
| :-------- | :------------------------- | :------------ |
| `views`   | `CompositeViewsDefinition` | `undefined`   |
| `replace` | `boolean`                  | `false`       |

#### Returns

[`Composite`](devtools.Composite.md)

---

### toJSON

▸ **toJSON**(): `EncodedCompositeDefinition`

Return a JSON-encoded `CompositeDefinition` structure that can be shared and reused.

#### Returns

`EncodedCompositeDefinition`

---

### toParams

▸ **toParams**(): [`CompositeParams`](../modules/devtools.md#compositeparams)

Return a deep clone of the internal [`CompositeParams`](../modules/devtools.md#compositeparams) for safe external access.

#### Returns

[`CompositeParams`](../modules/devtools.md#compositeparams)

---

### toRuntime

▸ **toRuntime**(): `RuntimeCompositeDefinition`

Return a `RuntimeCompositeDefinition` to be used at runtime by the
[`ComposeClient`](client.ComposeClient.md).

#### Returns

`RuntimeCompositeDefinition`

---

### create

▸ `Static` **create**(`params`): `Promise`\<[`Composite`](devtools.Composite.md)\>

Create new model streams based on the provided `schema` and group them in a composite
wrapped in a Composite instance.

#### Parameters

| Name     | Type                                                  |
| :------- | :---------------------------------------------------- |
| `params` | [`CreateParams`](../modules/devtools.md#createparams) |

#### Returns

`Promise`\<[`Composite`](devtools.Composite.md)\>

---

### from

▸ `Static` **from**(`composites`, `options?`): [`Composite`](devtools.Composite.md)

Create a Composite instance by merging existing composites.

#### Parameters

| Name         | Type                                                                    |
| :----------- | :---------------------------------------------------------------------- |
| `composites` | `Iterable`\<[`CompositeInput`](../modules/devtools.md#compositeinput)\> |
| `options?`   | [`CompositeOptions`](../modules/devtools.md#compositeoptions)           |

#### Returns

[`Composite`](devtools.Composite.md)

---

### fromJSON

▸ `Static` **fromJSON**(`params`): `Promise`\<[`Composite`](devtools.Composite.md)\>

Create a Composite instance from a JSON-encoded `CompositeDefinition`.

#### Parameters

| Name     | Type                                                      |
| :------- | :-------------------------------------------------------- |
| `params` | [`FromJSONParams`](../modules/devtools.md#fromjsonparams) |

#### Returns

`Promise`\<[`Composite`](devtools.Composite.md)\>

---

### fromModels

▸ `Static` **fromModels**(`params`): `Promise`\<[`Composite`](devtools.Composite.md)\>

Create a Composite instance from a set of Model streams already present on a Ceramic node.

#### Parameters

| Name     | Type                                                          |
| :------- | :------------------------------------------------------------ |
| `params` | [`FromModelsParams`](../modules/devtools.md#frommodelsparams) |

#### Returns

`Promise`\<[`Composite`](devtools.Composite.md)\>
